Fix dark mode styling

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -23,6 +23,7 @@ a {
 input {
   border: 1px solid hsl(13, 46.3%, 31.4%);
   border-radius: 6px;
+  border-color: hsl(13, 46.3%, 51.4%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -34,6 +35,7 @@ input {
     color: hsl(218.5, 79.2%, 73.1%);
   }
   input {
-    border-color: hsl(13, 46.3%, 51.4%);
+    background: hsl(215.3, 25%, 26.7%);
+    border-color: aliceblue;
   }
 }
